# sqlite_plugin_lj

./: CMakeLists.txt  DockerAlpine  DockerUbuntu  LICENSE  README.md  generate_lua_scripts.lua  test.sh
.github/workflows/: cmake-single-platform.yml
expected/: output_001.txt  output_002.txt  output_003.txt  output_004.txt  output_005.txt  output_006.txt  output_007.txt  output_008.txt  output_timed001.txt
sql/: input_001.sql  input_002.sql  input_003.sql  input_004.sql  input_005.sql  input_006.sql  input_007.sql  input_008.sql  input_timed001.sql
src/: plugin.c  sqlite_capi.lua  sqlite_lj.lua
